# ciso-assistant-community

./: .codacy.yaml  .dockerignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .plumber.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Contributor License Agreement.md  Dockerfile  LICENSE.md  LICENSE.txt  MUDA.yaml  README.md  SECURITY.md  X-RAYS_QUALITY_CHECKS.md  built-in.py  built-in.sh  ca-cli.py  cli_config.yaml  convential_commits.md  docker-compose-build-upgrade.sh  docker-compose-build.ps1  docker-compose-build.sh  docker-compose-build.yml  docker-compose-default.yml  docker-compose-pg-build.yml  docker-compose-pg.sh  docker-compose-pg.yml  docker-compose-prod.yml  docker-compose-remote-api.sh  docker-compose-remote-api.yml  docker-compose-remote.sh  docker-compose-remote.yml  docker-compose-traefik.yml  docker-compose.prod.yml  docker-compose.ps1  (+26 more)
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  Makefile  __init__.py  comprehensive_integration_test.py  ii-901.yaml  integration_structure_test.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  pytest_ddd.ini  requirements-prod.txt  requirements.txt  setup_phase0.sh  setup_rmf_phase0.sh  startup.sh  test_fixtures.py  test_saml.py  verify_rmf_complete.sh  verify_rmf_phase0.sh
backend/accounts/: __init__.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/app_tests/: conftest.py  test_vars.py
backend/asset_and_service/: __init__.py
backend/business_continuity/: __init__.py  apps.py
backend/ca_audit_log/: apps.py  middleware_request.py  mixins.py  models.py  registry.py  signals.py  utils.py
backend/cal/: apps.py  forms.py  models.py  utils.py
backend/chat/: ARCHITECTURE.md  README.md  apps.py  audit_prefill.py  constants.py  context.py  embedding_models.py  extractors.py  knowledge_graph.py  memory.py  metrics.py  models.py  orm_query.py  page_context.py  providers.py  questionnaire.py  rag.py  serializers.py  signals.py  tasks.py  text.py  tokens.py  tools.py  upload_validation.py  urls.py  views.py
backend/ciso_assistant/: asgi.py  build.json  meta.json  meta.py  settings.py  urls.py  wsgi.py
backend/compliance/: __init__.py  apps.py
backend/control_library/: __init__.py
backend/core/: admin_config.py  applied_controls_helper.py  apps.py  audit_inheritance.py  audit_visibility.py  base_models.py  cel_service.py  compliance_summary.py  constants.py  context.py  custom_middleware.py  dora.py  email_utils.py  excel.py  filters.py  focus_middleware.py  forms.py  friendly_names.py  generators.py  helpers.py  instance_metrics.py  middleware.py  models.py  models.py.v1  net_safety.py  pagination.py  permissions.py  preset_editor.py  routers.py  routing.py  sandbox.py  serializer_fields.py  serializers.py  signals.py  startup.py  tasks.py  urls.py  utilities.py  utils.py  validators.py  (+2 more)
backend/crq/: apps.py  models.py  serializer_fields.py  serializers.py  test_serializers.py  urls.py  utils.py  utils_v2.py  views.py
backend/custom_fields/: apps.py  filters.py  host.py  models.py  serializers.py  views.py
backend/data_wizard/: apps.py  arm_helpers.py  ebios_rm_excel_helpers.py  egerie_xml_helpers.py  serializers.py  tests.py  urls.py  views.py
backend/db/: readme.txt
backend/doc_management/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/ebios_rm/: apps.py  helpers.py  models.py  serializers.py  urls.py  views.py
backend/fixtures/: __init__.py  dummy-domain.bak
backend/global_settings/: apps.py  models.py  routers.py  serializers.py  urls.py  utils.py  views.py
backend/iam/: adapter.py  admin.py  apps.py  cache_builders.py  forms.py  group_membership.py  models.py  serializers.py  snapshot_cache.py  urls.py  utils.py  views.py
backend/integrations/: apps.py  base.py  models.py  registry.py  serializers.py  settings_access.py  sync_mixin.py  syncable.py  tasks.py  test_asset_sync_db.py  test_settings_access.py  urls.py  views.py
backend/metrology/: apps.py  builtin_metrics.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/pmbok/: apps.py  models.py  serializers.py  urls.py  views.py
backend/portals/: apps.py  models.py  serializers.py  snapshots.py  urls.py  views.py
backend/privacy/: apps.py  models.py  serializers.py  urls.py  views.py
backend/rag_poc/: README.md  config.py  demo.py  index.py  providers.py  query.py  requirements.txt
backend/resilience/: apps.py  dora_ir_export.py  models.py  serializers.py  urls.py  views.py
backend/risk_registers/: README.md  __init__.py  apps.py
backend/scripts/: convert_ccm.py  convert_ccm_v2.py  convert_library_v2.py  convert_v1_to_v2.py  prep_cis.py  prep_cis_v2.py
backend/sec_intel/: apps.py  feeds.py  models.py  serializers.py  tasks.py  views.py
backend/security_operations/: __init__.py  apps.py
backend/serdes/: README.md  domain_io.py  export_utils.py  forms.py  serializers.py  urls.py  utils.py  views.py
backend/settings/: apps.py  models.py  urls.py  views.py
backend/third_party_management/: __init__.py  (+1 more)
cli/: .clica.env  .clica.env.template  .gitignore  .mcp.env  MCP_SETUP_GUIDE.md  RA_sample.csv  README-upload.md  README.md  applied_controls_sample.csv  bundle_risk_assessment_csv.py  bundle_to_csv.py  ca-cli.py  ca_mcp.py  cli_config.yaml  clica.py  convert-assets.py  evidences.csv  fastapi.md  fastapi_requirements.txt  fastapi_wrapper.py  import-assets.ps1  import-mes-assets.ps1  import_complete_json_bundle.py  import_ebios_feared_events.py  import_ebios_json_package.py  import_risk_sources.py  mcp.md  pyproject.toml  requirements.txt  sample_applied_controls.csv  sample_assets.csv  sample_audit.csv  sample_controls.csv  sample_task_templates.csv  sample_vulnerabilities.csv
consumer/: .gitignore  consumer.py  events.py  filtering.py  pyproject.toml
dispatcher/: .dockerignore  .gitignore  Dockerfile  README.md  dispatcher.py  docker-compose-build.sh  entrypoint.sh  events.py  filtering.py  messages.py  pyproject.toml  schemas.py  settings.py  startup.sh
(+5115 files in other folders)
