[tool.poetry]
name = "ciso-assistant-community"
version = "0.1.0"
description = ""
authors = ["intuitem <contact@intuitem.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
django = "^6.0.2"
weasyprint = "^68.0"
psycopg2-binary = "^2.9.11"
gunicorn = "^23.0.0"
django-filter = "^25.2"
whitenoise = "^6.11.0"
argon2-cffi = "^23.1.0"
djangorestframework = "^3.16.1"
django-tailwind = "^4.4.2"
pyyaml = "^6.0.3"
django-structlog = "^10.0.0"
structlog = "^24.4.0"
python-dotenv = "^1.2.1"
drf-spectacular = "^0.29.0"
django-rest-knox = "^5.0.2"
django-allauth = { version = "^65.13.1", extras = [
  "socialaccount",
  "saml",
  "mfa",
  "headless",
] }
python-magic = "^0.4.27"
pytz = "^2025.2"
fido2 = "^2.1.1"
humanize = "^4.15.0"
huey = "^2.5.5"
python-docx = "^1.2.0"
docxtpl = "^0.20.2"
numpy = "^2.4.1"
scipy = "^1.16.3"
matplotlib = "^3.10.8"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
django-auditlog = "^3.4.1"
xmlsec = "^1.3.17"
boto3 = "^1.42.16"
django-storages = "^1.14.6"
icecream = "^2.1.8"
regex = "^2025.11.3"
prometheus-client = "^0.22.1"
jira = "^3.10.5"
cryptography = "^46.0.5"

[tool.poetry.group.dev.dependencies]
pytest-django = "4.11.1"
pytest-html = "4.1.1"
django-stubs = "5.2.9"
mypy = "^1.9.0"
coverage = "7.5.4"
pre-commit = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
