[project]
name = "ciso-assistant-community"
version = "0.1.0"
description = ""
authors = [{ name = "intuitem", email = "contact@intuitem.com" }]
requires-python = ">=3.14,<4"
readme = "README.md"

dependencies = [
    "django>=6.0.3,<7",
    "weasyprint>=68.0,<69",
    "psycopg2-binary>=2.9.11,<3",
    "gunicorn>=23.0.0,<24",
    "django-filter>=25.2,<26",
    "whitenoise>=6.11.0,<7",
    "argon2-cffi>=23.1.0,<24",
    "djangorestframework>=3.16.1,<4",
    "django-tailwind>=4.4.2,<5",
    "pyyaml>=6.0.3,<7",
    "django-structlog>=10.0.0,<11",
    "structlog>=24.4.0,<25",
    "python-dotenv>=1.2.1,<2",
    "drf-spectacular>=0.29.0,<0.30",
    "django-rest-knox>=5.0.2,<6",
    "django-allauth[socialaccount, saml, mfa, headless]>=65.14.1,<66",
    "python-magic>=0.4.27,<0.5",
    "pytz>=2025.2,<2026",
    "fido2>=2.1.1,<3",
    "humanize>=4.15.0,<5",
    "huey>=2.5.5,<3",
    "python-docx>=1.2.0,<2",
    "docxtpl>=0.20.2,<0.21",
    "numpy>=2.4.1,<3",
    "scipy>=1.16.3,<2",
    "matplotlib>=3.10.8,<4",
    "pandas>=2.3.3,<3",
    "openpyxl>=3.1.5,<4",
    "django-auditlog>=3.4.1,<4",
    "xmlsec>=1.3.17,<2",
    "boto3>=1.42.16,<2",
    "django-storages>=1.14.6,<2",
    "icecream>=2.1.8,<3",
    "regex>=2025.11.3,<2026",
    "prometheus-client>=0.22.1,<0.23",
    "jira>=3.10.5,<4",
    "cryptography>=46.0.5,<47",
    "cel-python>=0.5.0,<0.6",
    "qdrant-client>=1.14.2,<2",
    "httpx>=0.28.1,<0.29",
    "sentence-transformers>=4.1.0,<5",
    "PyMuPDF>=1.25.5,<2",
    "markdown>=3.10.2,<4",
    "rapidfuzz>=3.14.3,<4",
]

[dependency-groups]
dev = [
    "pytest-django==4.11.1",
    "pytest-html==4.1.1",
    "django-stubs==5.2.9",
    "mypy>=1.9.0,<2",
    "coverage==7.5.4",
    "pre-commit==3.7.1",
]

[tool.uv]
package = false
default-groups = "all"
