[project]
name = "enterprise_core"
version = "0.1.0"
description = ""
authors = [{ name = "intuitem", email = "contact@intuitem.com" }]
requires-python = ">=3.14,<4"
readme = "README.md"

dependencies = [
    "django>=6.0.3,<7",
    "python-dotenv>=1.0.1,<2",
    "markdown>=3.10.2,<4",
    "ciso-assistant-community",
]

[dependency-groups]
dev = ["pytest>=9.0.2,<10"]

[tool.uv.sources]
ciso-assistant-community = { path = "../../backend", editable = true }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
