[project]
name = "enterprise_core"
version = "0.1.0"
description = ""
authors = [{ name = "intuitem", email = "contact@intuitem.com" }]
requires-python = ">=3.14,<4"
readme = "README.md"

dependencies = [
    "django>=6.0.3,<7",
    "python-dotenv>=1.0.1,<2",
    "markdown>=3.10.2,<4",
    "ciso-assistant-community",
    "torch>=2.12.0,<3",
]

[dependency-groups]
dev = ["pytest>=9.0.2,<10"]

# Pull torch from the PyTorch CPU index so the CUDA/nvidia wheels (several GB) are
# never resolved or downloaded. Sources from the community path dependency are not
# inherited, so the torch index pin must be repeated here.
[tool.uv.sources]
ciso-assistant-community = { path = "../../backend", package = false}
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["enterprise_core"]
